sumo/tests/traci/VariableRetrieval/MeMeDetector/errors/UnknownAD/testclient.prog
simstep 48 1
getvariable 161 16 xxx
simstep 49 1
